--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1> Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+</head>
+
+<body>
+  <header>
+
+  </header>
+
+  <main>
+    <h1>Hi I'm Ross and this my portfolio</h1>
+
+  </main>
+
+
+  <footer>
+  </footer>
+
+</body>
+
+</html>
