add title, about text and projects link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Rakkas&family=Rubik:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 
 <body>
@@ -12,7 +17,13 @@
   </header>
 
   <main>
-    <h1>Hi I'm Ross and this my portfolio</h1>
+    <section class="grid">
+      <h1 class="title">Ross Kendall-Selwyn
+      Web Developer</h1>
+      <h2 class="projects"><a href="projects.html">Projects</a></h2>
+      <p>Hi, I'm Ross. I'm a Web Developer learning as I go. I love CSS, HTML and SASS. I understand JavaScript and I'm learning React so that I can make more interactive UI's. Here you'll find projects that I've completed and a description about how I built them.</p>
+    </section>
+
 
   </main>
 
