--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h2 class="projects"><a href="#projects">Projects</a></h2>
         <h2 class="contact">Contact</h2>
       </div>
-      <p id="about">Hi, I'm Ross!<br> I can code in CSS, HTML and SASS and JavaScript. I hold a bachelors degree in <span>Marketing </span>from the University of Colorado and help businesses achieve their high level goals through
-        <span>intelligent</span> marketing decisions and <span>effective</span> web design. Below you'll find some projects that I've completed and a description about how I built them.</p>
+      <p id="about">Hi, I'm Ross!<br> I can code in CSS, HTML and SASS and JavaScript. I hold a bachelors degree in Marketing from the University of Colorado and help businesses achieve their high level goals through
+        intelligent marketing decisions and effective web design. Below you'll find some projects that I've completed and a description about how I built them.</p>
       <div id="reveal">
         <span><a href="mailto:rk.selwyn@gmail.com" subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
             <span><a href="https://github.com/RossKS/portfolio" target="_blank">view my code:<br> Github</a></span>
