add renamed screenshot

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <section class="section-2" id="projects">
       <div class="firstview">
-        <img src="images/firstview homepage.png" />
+        <img src="images/firstview-lettings-homepage.png" />
         <article>
           <h2>Firstview Lettings Ltd</h2>
           <!-- <h3>View code on Github</h3> -->
