--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Rakkas&family=Rubik:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
@@ -32,12 +33,13 @@
       arrow_upward
       </span>
     </button>
+    <span id="name">Ross Kendall-Selwyn</span>
     <section class="grid">
       <h1 class="title">Ross Kendall-Selwyn
         Front End Web Developer</h1>
       <div class="procon">
-        <h2 class="projects"><a href="#projects" tabindex="1">Projects</a></h2>
-        <h2 class="contact" role="button" tabindex="2"><span class="material-icons arrow_right">
+        <h2 class="projects"><a href="#projects">Projects</a></h2>
+        <h2 class="contact" role="button" ><span class="material-icons arrow_right">
         arrow_right
         </span>Contact</h2>
       </div>
@@ -70,8 +72,8 @@
         <p>For Firstview Lettings Ltd I created a website that reflected their simplicity with an easy to use UX and informative copy. The goal for the site was to create a modern website with increased usability and clarity. Overall the business wanted to attract and convert more visitors. Firstview Lettings had recently pivoted its business model and wanted a site that reflected their new direction.</p>
       </div>
 
-
     </section>
+
 
 
 
@@ -79,12 +81,15 @@
 
 
   <footer>
+    <!-- <svg enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24" width="18" xmlns="http://www.w3.org/2000/svg"><path d="m12 .5c-6.63 0-12 5.28-12 11.792 0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56 4.801-1.548 8.236-5.97 8.236-11.173 0-6.512-5.373-11.792-12-11.792z" fill="#212121"/></svg> -->
+
   </footer>
   <script>
     document.querySelector('.contact').addEventListener("click", function() {
       document.querySelector('#reveal').style.display = 'inline-block';
       document.querySelector('.arrow_right').innerHTML = 'arrow_drop_down';
     });
+
 
 
 
