--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Rakkas&family=Rubik:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -33,20 +33,21 @@
       arrow_upward
       </span>
     </button>
-    <span id="name">Ross Kendall-Selwyn</span>
+    <div id="name"><a href="https://github.com/RossKS?tab=repositories" target="_blank"><svg  role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub icon</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" /></svg></a><a href="https://www.linkedin.com/in/rkendall-selwyn/" target="_blank">
+    <svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a></div>
     <section class="grid">
       <h1 class="title">Ross Kendall-Selwyn
         Front End Web Developer</h1>
-      <div class="procon">
+      <!-- <div class="procon">
         <h2 class="projects"><a href="#projects">Projects</a></h2>
         <h2 class="contact" role="button" ><span class="material-icons arrow_right">
         arrow_right
         </span>Contact</h2>
-      </div>
-      <p id="about">Hi, I'm Ross!<br> I code CSS, HTML and SASS and JavaScript. Additionally, I hold a bachelors degree in Marketing from the University of Colorado and help businesses achieve their high level goals through
-        intelligent marketing decisions and effective web design. Below you'll find some projects that I've completed and a description about how I built them.</p>
+      </div> -->
+      <p id="about">Hi, I'm Ross.<br><br> I'm a Front End Web Developer based in Derby. I code HTML, CSS/SASS and JavaScript and hold a bachelors degree in Business Administration, with an emphasis on Marketing, from the University of Colorado. <br><br><!--
+        After 7 amazing years in Colorado I moved back to the UK.<br><br>-->  Below you'll find some projects that I've completed and a description about them.</p>
       <div id="reveal">
-        <span><a href="mailto:rk.selwyn@gmail.com" subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
+        <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
             <span><a href="https://github.com/RossKS/portfolio" target="_blank">view my code:<br> Github</a></span>
       </div>
     </section>
@@ -58,11 +59,11 @@
           <h3>Website built using:</h3>
           <ul>
             <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
+            <li>CSS/SASS</li>
+            <li>JavaScript/JQuery</li>
             <li>Bootstrap 4</li>
-            <li>SASS</li>
             <li>PHP</li>
+            <li>Git/GitHub</li>
           </ul>
           <a role="button" href="http://www.firstviewlettings.co.uk/" target="_blank">View Live Site</a>
           <a role="button" href="https://github.com/RossKS/firstview-lettings" target="_blank">View GitHub Repo</a>
@@ -81,7 +82,6 @@
 
 
   <footer>
-    <!-- <svg enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24" width="18" xmlns="http://www.w3.org/2000/svg"><path d="m12 .5c-6.63 0-12 5.28-12 11.792 0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56 4.801-1.548 8.236-5.97 8.236-11.173 0-6.512-5.373-11.792-12-11.792z" fill="#212121"/></svg> -->
 
   </footer>
   <script>
