change background color to darker grey

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             arrow_right
             </span>Contact</h2>
           </div> -->
-          <p id="about">Hi, I'm Ross.<br><br> I'm a Front End Web Developer based in Derby. I code HTML, CSS/SASS and JavaScript and hold a bachelors degree in Business Administration, with an emphasis on Marketing, from the University of Colorado. <br><br><!--
+          <p id="about">Hi, I'm Ross.<br><br> I'm a Front End Web Developer based in Derby. I code HTML, CSS/SASS and JavaScript and hold a bachelors degree in Business Administration, with in emphasis on Marketing, from the University of Colorado. <br><br><!--
             After 7 amazing years in Colorado I moved back to the UK.<br><br>-->  Below you'll find some projects of mine and a description about them.</p>
           <div id="reveal">
             <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
@@ -81,7 +81,7 @@
         </div>
         <div>
           <p>For Firstview Lettings Ltd I created a website that reflected their simplicity with an easy to use UX and informative copy. The goal for the site was to create a modern website with increased usability and clarity of their product offering. Overall the business wanted to attract and convert more visitors.</p>
-          <p>I developed it mostly using CSS but used Sass for some mixins and variables. It uses a small amount of  Bootstrap4, a JQuery carousel animation and I coded the contact form using PHP which sanitizes and validates user input. It's designed mobile first and works on all screen sizes which is crucial for modern websites.</p>
+          <p>This site was developed mostly using CSS but I used Sass for some mixins and variables. A small amount of  Bootstrap4 and a JQuery carousel animation was also used. I coded the contact form using PHP and ensured sanitization and validation of user input. It's designed mobile first and works on all screen sizes which is crucial for modern websites.</p>
 <span class="project-number">P.01</span>
         </div>
 
