add section 3 and footer

--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
             <a role="button" href="https://rossks.github.io/portfolio/Todo.html">View Project</a>
             <a role="button" href="https://github.com/RossKS/portfolio">View GitHub Repo</a>
           </div>
+          </div>
 
-        </div>
-
+          <div>
+            <p>I created this simple To-do List web application using Vue.js as a practice project. I wanted to create something simple but also had the potential to become more complex as I become more experienced.</p>
+            <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p>
+          </div>
 
       </section>
 
@@ -115,16 +118,13 @@
 
 
   <footer>
+    <div>
+      <h2>To learn more about how I can create an engaging and effective website for your brand, reach out today!</h2>
+
+      <a role="button" href="mailto:rk.selwyn@gmail.com">Email me</a>
+    </div>
 
   </footer>
-
-  <!-- <script>
-      $(".main").onepage_scroll();
-  </script> -->
-
-
-
-
 
   <script>
     const btnScrollToTop = document.querySelector("#btnScrollToTop");
@@ -139,7 +139,6 @@
       });
   </script>
 
-  <!-- </div> -->
 </body>
 
 
