make mobile friendly

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           </div>
 
           <div>
-            <p>I created this simple To-do List web application using Vue.js as a practice project. I wanted to create something simple but also had the potential to become more complex as I become more experienced.</p>
-            <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p>
+            <p>I created this simple web application using Vue.js as a practice project. I wanted to create something simple but also had the potential to become more complex as I become more experienced.</p>
+            <!-- <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p> -->
           </div>
 
       </section>
