test link to sterling builds

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <!-- <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
                 <span><a href="https://github.com/RossKS/portfolio" target="_blank">view my code:<br> Github</a></span> -->
           </div>
+          <a href="sterlingbuilds.html">click me</a>
       </section>
 
       <section class="section-2" id="projects">
