--- a/sterlingbuilds.html
+++ b/sterlingbuilds.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="sterling-builds.css" />
+  <link rel="stylesheet" href="sterlingbuilds.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
   <link rel="shortcut icon" type="image/png" href="sterling-logo.svg">
