--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <li>PHP</li>
               <li>Git/GitHub</li>
             </ul>
-            <a role="button" href="http://www.firstviewlettings.co.uk/" target="_blank">View Live Site</a>
+            <a role="button" href="firstview/firstviewhome.html" target="_blank">View Live Site</a>
             <a role="button" href="https://github.com/RossKS/firstview-lettings" target="_blank">View GitHub Repo</a>
           </article>
         </div>
