--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="Nottingham, Derby, Heanor, Lettings, properties to let, homes to let, homes to rent, flats to let, property management">
   <link rel="stylesheet" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="stylesheets/firstview-lettings.min.css"/>
   <link rel="stylesheet" href="stylesheets/keyframes.css"/>
 
