add fv images folder and point image lines to fv folder

--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -16,7 +16,7 @@
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Firstview Lettings</title>
-  <link rel="shortcut icon" type="image/png" href="images/keys-logo.png">
+  <link rel="shortcut icon" type="image/png" href="fv-images/keys-logo.png">
 
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -33,7 +33,7 @@
       </button>
     </div>
     <header>
-      <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo" alt="firstview lettings logo"></a>
+      <a href="firstview-lettings-home.html"><img src="fv-images/main-logo.jpg" id="main-logo" alt="firstview lettings logo"></a>
       <nav class="nav flex-row flex-sm-row">
         <a id="home" class="flex-sm-fill text-sm-center nav-link current" href="firstview-lettings-home.html">Home</a>
         <a id="properties" class="flex-sm-fill text-sm-center nav-link" href="properties.html">Properties</a>
@@ -134,7 +134,7 @@
           <h2 class="index-subheading">Featured Properties</h2>
           <div class="card-deck">
             <div class="card .h-100">
-              <img src="images/full-lakeview.jpg" class="card-img-top" alt="View of lakeview apartments from the front.">
+              <img src="fv-images/full-lakeview.jpg" class="card-img-top" alt="View of lakeview apartments from the front.">
               <div class="card-body card-bottom">
                 <h5 class="card-title">One Bedroom Flat - Fishponds - Bristol</h5>
                 <p class="card-text">Modern one bedroom, secure second floor flat, 1 mile from city center.</p>
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="card .h-100">
-              <img src="images/full-marine_gardens.gif" class="card-img-top" alt="view of marine gardens from the front.">
+              <img src="fv-images/full-marine_gardens.gif" class="card-img-top" alt="view of marine gardens from the front.">
               <div class="card-body card-bottom">
                 <h5 class="card-title">One Bedroom Flat - Coleford - Gloucester</h5>
                 <p class="card-text">One bedroom, ground floor flat with double bedroom and modern kitchen.</p>
