add sterling builds section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
                 <span><a href="https://github.com/RossKS/portfolio" target="_blank">view my code:<br> Github</a></span> -->
           </div>
-          <a href="sterlingbuilds.html">click me</a>
+
       </section>
 
       <section class="section-2" id="projects">
@@ -110,6 +110,11 @@
             <!-- <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p> -->
           </div>
 
+      </section>
+      <section>
+        <h2>Sterling Builds Inc </h2>
+        <a role="button" href="sterlingbuilds.html">View Website</a>
+        <a role="button" href="https://github.com/RossKS/portfolio/sterlingbuilds.html"> View GitHub Repo </a>
       </section>
 
 
