update index page to include sterling project

--- a/sterlingbuilds.html
+++ b/sterlingbuilds.html
@@ -67,7 +67,7 @@
             </a>
           </div>
 
-          <span id="copyright">Sterling Builds Inc &copy;</span>
+          <span id="copyright">Ross Kendall-Selwyn &copy;</span>
         </footer>
     </div>
 
