--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@800&display=swap" rel="stylesheet">
 
@@ -29,7 +28,7 @@
   </header>
   <main>
 
-      <section class="grid">
+    <section class="grid">
       <!-- <div class="menu">
 
 
@@ -37,85 +36,115 @@
       </div> -->
       <button id="btnScrollToTop">
         <span class="material-icons">
-        arrow_upward
+          arrow_upward
         </span>
         <span>Top</span>
       </button>
 
-      <div id="name"><a href="https://github.com/RossKS?tab=repositories" target="_blank"><svg  role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub icon</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" /></svg></a><a href="https://www.linkedin.com/in/rkendall-selwyn/" target="_blank">
-      <svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn icon</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg></a>
-      <a href="mailto:rk.selwyn@gmail.com" subject="Portfolio Enquiry"> <svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Gmail icon</title><path d="M24 4.5v15c0 .85-.65 1.5-1.5 1.5H21V7.387l-9 6.463-9-6.463V21H1.5C.649 21 0 20.35 0 19.5v-15c0-.425.162-.8.431-1.068C.7 3.16 1.076 3 1.5 3H2l10 7.25L22 3h.5c.425 0 .8.162 1.069.432.27.268.431.643.431 1.068z"/></svg></a>
+      <div id="name"><a href="https://github.com/RossKS?tab=repositories" target="_blank"><svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>GitHub icon</title>
+            <path
+              d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+          </svg></a><a href="https://www.linkedin.com/in/rkendall-selwyn/" target="_blank">
+          <svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>LinkedIn icon</title>
+            <path
+              d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
+          </svg></a>
+        <a href="mailto:rk.selwyn@gmail.com" subject="Portfolio Enquiry"> <svg role="img" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>Gmail icon</title>
+            <path d="M24 4.5v15c0 .85-.65 1.5-1.5 1.5H21V7.387l-9 6.463-9-6.463V21H1.5C.649 21 0 20.35 0 19.5v-15c0-.425.162-.8.431-1.068C.7 3.16 1.076 3 1.5 3H2l10 7.25L22 3h.5c.425 0 .8.162 1.069.432.27.268.431.643.431 1.068z" />
+          </svg></a>
       </div>
 
-          <h1 class="title">Ross Kendall-Selwyn
-            Front End Web Developer</h1>
+      <h1 class="title">Ross Kendall-Selwyn
+        Front End Web Developer</h1>
 
-          <p id="about">Hi, I'm Ross.<br><br> I'm a Front End Web Developer based in Derby. I code HTML, CSS/SASS and JavaScript and hold a bachelors degree in Business Administration from the University of Colorado. <br><br>
-            I create responsive, accessible and effective websites that engage and inform.<br><br>
-            Below you'll find some projects of mine and a description about them.</p>
-          <!-- <div id="reveal"> -->
-            <!-- <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
+      <p id="about">Hi, I'm Ross.<br><br> I'm a Front End Web Developer based in Derby. I know HTML, CSS/SASS and JavaScript. I hold a bachelors degree in Business Administration and am currently pursing a Master's. <br><br>
+        I create responsive, accessible and effective websites that engage and inform.<br><br>
+        Below you'll find some projects I've worked on and a description about them.</p>
+      <!-- <div id="reveal"> -->
+      <!-- <span><a href="mailto:rk.selwyn@gmail.com"  subject="Portfolio Contact">email me: rk.selwyn@gmail.com</a><span>
                 <span><a href="https://github.com/RossKS/portfolio" target="_blank">view my code:<br> Github</a></span> -->
-          </div>
+      </div>
 
-      </section>
+    </section>
+    <section>
 
-      <section class="section-2" id="projects">
-        <div class="firstview">
-
-          <img src="images/firstview-lettings-homepage.png" />
-          <article>
-            <h2>Firstview Lettings Ltd</h2>
-            <h3>Website built using:</h3>
-            <ul>
-              <li>HTML</li>
-              <li>CSS/Sass</li>
-              <li>JavaScript/JQuery</li>
-              <li>Bootstrap 4</li>
-              <li>PHP</li>
-              <li>Git/GitHub</li>
-            </ul>
-            <a role="button" href="firstview-lettings-home.html" target="_blank">View Live Site</a>
-            <a role="button" href="https://github.com/RossKS/firstview-lettings" target="_blank">View GitHub Repo</a>
-          </article>
-        </div>
+      <div id="sterling-pics">
+        <img src="sterling-home-ss.png" />
+        <!-- <img src="sterling-about-ss.png" /> -->
         <div>
-          <p>For Firstview Lettings Ltd I created a completely new website with a reworked UX and UI. The goal  was to create a modern website with increased usability and clarity of their product offering, which clearly explained each service. It's designed mobile-first with responsive breakpoints.</p>
-          <p>This site was developed mostly using CSS but I used Sass for some mixins and variables. A small amount of Bootstrap4 and a JQuery carousel animation was also used. I coded the contact form using PHP and ensured sanitization and validation of user input.</p>
-          <!-- <span class="project-number">P.01</span> -->
+          <h2>Sterling Builds Inc </h2>
+          <h3> This Website is built using:</h3>
+          <ul>
+            <li>CSS</li>
+            <li>HTML</li>
+          </ul>
+
+          <a role="button" href="sterlingbuilds.html" target="_blank">View Website</a>
+          <a role="button" href="https://github.com/RossKS/portfolio/sterlingbuilds.html" target="_blank"> View GitHub Repo </a>
         </div>
+      </div>
+      <div>
+      <p> This is a project I have been working on for a client to showcase their construction work, for now it is simple an effective but will grow over time </p>
+    </div>
+    </section>
 
-      </section>
-      <section>
-        <!-- <p>I can build you an effective website, whether it be for business or a personal blog. Contact me at the details below to discuss your project.</p> -->
-        <div id="project2">
-          <img src="images/TodoList.png" />
-          <div>
-            <h2>To Do List Web Application</h2>
-            <h3>Website built using:</h3>
-            <ul>
-              <li>Vue.js</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>Git/GitHub</li>
-            </ul>
-            <a role="button" href="https://rossks.github.io/portfolio/Todo.html">View Project</a>
-            <a role="button" href="https://github.com/RossKS/portfolio">View GitHub Repo</a>
-          </div>
-          </div>
+    <section class="section-2" id="projects">
+      <div class="firstview">
 
-          <div>
-            <p>I created this simple web application using Vue.js as a practice project. I wanted to create something simple but also had the potential to become more complex as I become more experienced.</p>
-            <!-- <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p> -->
-          </div>
+        <img src="images/firstview-lettings-homepage.png" />
+        <article>
+          <h2>Firstview Lettings Ltd</h2>
+          <h3>Website built using:</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS/Sass</li>
+            <li>JavaScript/JQuery</li>
+            <li>Bootstrap 4</li>
+            <li>PHP</li>
+            <li>Git/GitHub</li>
+          </ul>
+          <a role="button" href="firstview-lettings-home.html" target="_blank">View Live Site</a>
+          <a role="button" href="https://github.com/RossKS/firstview-lettings" target="_blank">View GitHub Repo</a>
+        </article>
+      </div>
+      <div>
+        <p>For Firstview Lettings Ltd I created a completely new website with a reworked UX and UI. The goal was to create a modern website with increased usability and clarity of their product offering, which clearly explained each service. It's
+          designed mobile-first with responsive breakpoints.</p>
+        <p>This site was developed mostly using CSS but I used Sass for some mixins and variables. A small amount of Bootstrap4 and a JQuery carousel animation was also used. I coded the contact form using PHP and ensured sanitization and validation
+          of user input.</p>
+        <!-- <span class="project-number">P.01</span> -->
+      </div>
 
-      </section>
-      <section>
-        <h2>Sterling Builds Inc </h2>
-        <a role="button" href="sterlingbuilds.html">View Website</a>
-        <a role="button" href="https://github.com/RossKS/portfolio/sterlingbuilds.html"> View GitHub Repo </a>
-      </section>
+    </section>
+    <section>
+      <!-- <p>I can build you an effective website, whether it be for business or a personal blog. Contact me at the details below to discuss your project.</p> -->
+      <div id="project2">
+        <img src="images/TodoList.png" />
+        <div>
+          <h2>To Do List Web Application</h2>
+          <h3>Website built using:</h3>
+          <ul>
+            <li>Vue.js</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Git/GitHub</li>
+          </ul>
+          <a role="button" href="https://rossks.github.io/portfolio/Todo.html">View Project</a>
+          <a role="button" href="https://github.com/RossKS/portfolio">View GitHub Repo</a>
+        </div>
+      </div>
+
+      <div>
+        <p>I created this simple web application using Vue.js as a practice project. I wanted to create something simple but also had the potential to become more complex as I become more experienced.</p>
+        <!-- <p>This app lets a user add and remove list items and set the importance of items using simple colour-coding. You can try it yourself by clicking the 'View Project' button above.</p> -->
+      </div>
+
+    </section>
+
 
 
 
@@ -135,14 +164,14 @@
   <script>
     const btnScrollToTop = document.querySelector("#btnScrollToTop");
 
-      btnScrollToTop.addEventListener("click", function() {
+    btnScrollToTop.addEventListener("click", function() {
 
-        window.scrollTo({
-          top: 0,
-          left: 0,
-          behavior: "smooth"
-        });
+      window.scrollTo({
+        top: 0,
+        left: 0,
+        behavior: "smooth"
       });
+    });
   </script>
 
 </body>
